Note the Win32 ANSI music fix

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -8,6 +8,7 @@ Fix broken vertical (U+00A6) vs. vertical line (U+007C)
 Add custom palette support to list file
 Pass control key combinations in BBC Micro mode
 Add support for DECSC/DECRC control codes
+Fix crash when first ANSI music note played is in background
 
 Version 1.6
 ------------
