Add to changes.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -9,6 +9,7 @@ Add custom palette support to list file
 Pass control key combinations in BBC Micro mode
 Add support for DECSC/DECRC control codes
 Fix crash when first ANSI music note played is in background
+Fix binary mode tracking, which could cause issues after transfers
 
 Version 1.6
 ------------
