Fix SDL/GDI issue with textmode() using alternate fonts
Previously, SDL and GDI modes (but not X11 mode) would return early
from textmode() if the new mode is the same as the old mode. This
would result in the font not being reset to the defaults for the
mode.

This was most noticable when using RIP to change the font to one of
a difference size since the mode remains the same, but the font and
screen dimensions change.

Should fix issue 201

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -10,6 +10,7 @@ Pass control key combinations in BBC Micro mode
 Add support for DECSC/DECRC control codes
 Fix crash when first ANSI music note played is in background
 Fix binary mode tracking, which could cause issues after transfers
+Fix SDL and GDI issue with textmode() when font is changed
 
 Version 1.6
 ------------
