Fix screen save/restore for manual uploads
While it was properly entering the mode for the file picker, it
restored the screen before the protocol picker, which resulted in
the palette/charset from the connection being used for the transfer
window.

Fixes ticket 202

While we're here, wrap the whole "put everything in CP437 mode"
into a new function and use it everywhere.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -11,6 +11,7 @@ Add support for DECSC/DECRC control codes
 Fix crash when first ANSI music note played is in background
 Fix binary mode tracking, which could cause issues after transfers
 Fix SDL and GDI issue with textmode() when font is changed
+Fix manual upload screen when not in cp437+ANSI mode
 
 Version 1.6
 ------------
