--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -12,6 +12,7 @@ Fix crash when first ANSI music note played is in background
 Fix binary mode tracking, which could cause issues after transfers
 Fix SDL and GDI issue with textmode() when font is changed
 Fix manual upload screen when not in cp437+ANSI mode
+Fix loss of character when performing LCF wrap
 
 Version 1.6
 ------------
