Implement feature request 110
This was actually a bug report, where if a RIP "ANSI" sequence that
was split across packets would be passed to the SkyPix handler
instead of being handled as RIP.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -14,6 +14,7 @@ Fix SDL and GDI issue with textmode() when font is changed
 Fix manual upload screen when not in cp437+ANSI mode
 Fix loss of character when performing LCF wrap
 Fix crash at startup when built with gcc15 and -fhardened
+Fix RIP handling when ESC[! sequences are split between packets
 
 Version 1.6
 ------------
