--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -15,6 +15,8 @@ Fix manual upload screen when not in cp437+ANSI mode
 Fix loss of character when performing LCF wrap
 Fix crash at startup when built with gcc15 and -fhardened
 Fix RIP handling when ESC[! sequences are split between packets
+Improve RIP sounds
+Implement RIP STW/RTW and SCB/RCP commands
 
 Version 1.6
 ------------
