Fix double-height blinking in Prestel mode

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -5,9 +5,9 @@ Add support for DECSC/DECRC control codes
 Pass control key combinations in BBC Micro mode
 Implement RIP STW/RTW and SCB/RCP commands
 Implement RIP exploding button flag
+Support downloading in Prestel mode via CET Telesoftware protocol
 Improve RIP sounds
 Update Prestel/Mode 7 keybindings
-Support downloading in Prestel mode via CET Telesoftware protocol
 Don't disable status line for Atari ST modes
 Fix divide by zero when playing invalid ANSI music
 Fix APB and APU from top in BBC Micro Mode 7
@@ -20,6 +20,7 @@ Fix manual upload screen when not in cp437+ANSI mode
 Fix loss of character when performing LCF wrap
 Fix crash at startup when built with gcc15 and -fhardened
 Fix RIP handling when ESC[! sequences are split between packets
+Fix double-height blinking in Prestel mode
 
 Version 1.6
 ------------
