--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -4,6 +4,7 @@ Add CTSV APC command
 Optimize dialing directory parsing
 Fix scroll wheel in RIP mode
 Support OSC 10 ; ? ST and OSC 11 ; ? ST
+Add menu for editing an entries palette
 
 Version 1.7b
 ------------
